--- a/workshop/workshop.yaml
+++ b/workshop/workshop.yaml
@@ -1,8 +1,9 @@
-name: Markdown Sample
+name: Getting Started with Spring Cloud Gateway
 
 modules:
     activate:
-    - workshop-overview
-    - setup-environment
-    - exercises/01-sample-content
+    - exercises/01-intro
+    - exercises/02-Build-with-Gradle
+    - exercise/03-Using-Hystrix
+    - exercises/04-Writting-Tests
     - workshop-summary
