--- a/resources/training-portal.yaml
+++ b/resources/training-portal.yaml
@@ -1,10 +1,10 @@
 apiVersion: training.eduk8s.io/v1alpha1
 kind: TrainingPortal
 metadata:
-  name: lab-markdown-sample
+  name: lab-spring-gateway
 spec:
   workshops:
-  - name: lab-markdown-sample
+  - name: lab-spring-gateway
     capacity: 1
     expires: 60m
     orphaned: 5m
