shortened file names to see if it gets rid of bug

--- a/resources/workshop.yaml
+++ b/resources/workshop.yaml
@@ -13,7 +13,7 @@ spec:
     image: quay.io/eduk8s/jdk8-environment:master
     files: github.com/everythingeverywhere/lab-spring-gateway
   session:
-    budget: medium
+    budget: small
     applications:
       console:
         enabled: true
