enabling 2nd terminal and deleting console

--- a/resources/workshop.yaml
+++ b/resources/workshop.yaml
@@ -13,9 +13,10 @@ spec:
     image: quay.io/eduk8s/jdk8-environment:master
     files: github.com/everythingeverywhere/lab-spring-gateway
   session:
-    budget: small
+    budget: medium
     applications:
-      console:
+      terminal:
         enabled: true
+        layout: split
       editor:
         enabled: true
