--- a/workshop/modules.yaml
+++ b/workshop/modules.yaml
@@ -10,9 +10,10 @@ modules:
         name: Test Your Simple Route   
     exercises/05-hystrix:
         name: Using Hystrix  
-    exercises/06-write-tests:
+    exercises/06-test-hystrix:
+        naame: Writing Tests
+    exercises/07-write-tests:
         name: Writing Tests
     workshop-summary:
         name: Workshop Summary
         exit_sign: Finish Workshop
-
