--- a/workshop/modules.yaml
+++ b/workshop/modules.yaml
@@ -11,7 +11,7 @@ modules:
     exercises/05-hystrix:
         name: Using Hystrix  
     exercises/06-test-hystrix:
-        naame: Writing Tests
+        name: Test Hystrix Route
     exercises/07-write-tests:
         name: Writing Tests
     workshop-summary:
