--- a/workshop/workshop.yaml
+++ b/workshop/workshop.yaml
@@ -9,7 +9,7 @@ modules:
     - exercises/04-hystrix
     - exercises/05-test-hystrix
     - exercises/06-fallback
-    - exercise/07-write-tests
+    - exercises/07-write-tests
     - workshop-summary
 
 
