--- a/workshop/modules.yaml
+++ b/workshop/modules.yaml
@@ -15,6 +15,8 @@ modules:
         name: Test Hystrix Route
     exercises/06-fallback:
         name: Creating a User Friendly Response
+    exercises/07-test-fallback.md:
+        name: Test the `/fallback` Endpoint
     workshop-summary:
         name: Workshop Summary
         exit_sign: Finish Workshop
